crates/analyzer/tests/snapshots/errors__call_non_pub_fn_on_external_contract.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: The function `do_private_thingz` on `contract Foo` is private
  ┌─ compile_errors/call_non_pub_fn_on_external_contract.fe:9:21
  │  
4 │ ╭   fn do_private_thingz(self):
5 │ │      self.val = 100
  │ ╰───────────────────' `do_private_thingz` is defined here
  · │
9 │       Foo(address(0)).do_private_thingz()
  │                       ^^^^^^^^^^^^^^^^^ this function is not `pub`


